Basic tree models and Random forest done

--- a/ML_nuggets.ipynb
+++ b/ML_nuggets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -19,13 +19,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.cross_validation import cross_val_score, train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "from sklearn.learning_curve import learning_curve, validation_curve\n",
     "from sklearn.linear_model import Lasso, LinearRegression, Ridge\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -771,6 +771,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The best model found in R had an SSE of 7.6168e+9, or an average error of $16,206.  How does the new best model compare?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg. error: $13509.35\n",
+      "Std Dev. of revenue: $23841.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'Avg. error: $%.2f' %np.sqrt(currentBest['rss'] / len(y_test))\n",
+    "print 'Std Dev. of revenue: $%.2f'%np.std(df['revenue'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting better! The mean error now is almost half the standard deviation... but maybe we can do better still....?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lasso Regression"
    ]
   },
@@ -986,6 +1021,188 @@
    "metadata": {},
    "source": [
     "# Tree Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gs = GridSearchCV(\n",
+    "    estimator = DecisionTreeRegressor(random_state = 11),\n",
+    "    param_grid = [{ 'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, None],\n",
+    "                    'min_samples_split': [1, 2, 3, 4, 8],\n",
+    "                    'min_samples_leaf': [1, 2, 3, 4, 8] }],\n",
+    "    cv = 10,\n",
+    "    n_jobs = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10, error_score='raise',\n",
+       "       estimator=DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, presort=False, random_state=11,\n",
+       "           splitter='best'),\n",
+       "       fit_params={}, iid=True, n_jobs=-1,\n",
+       "       param_grid=[{'min_samples_split': [1, 2, 3, 4, 8], 'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, None], 'min_samples_leaf': [1, 2, 3, 4, 8]}],\n",
+       "       pre_dispatch='2*n_jobs', refit=True, scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min_samples_split': 1, 'max_depth': 4, 'min_samples_leaf': 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print gs.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=4, max_features=None,\n",
+       "           max_leaf_nodes=None, min_samples_leaf=8, min_samples_split=1,\n",
+       "           min_weight_fraction_leaf=0.0, presort=False, random_state=11,\n",
+       "           splitter='best')"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_clf = gs.best_estimator_\n",
+    "tree_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11492526797.831745"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_rss(tree_clf, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "forest_clf = RandomForestClassifier(criterion = 'entropy', \n",
+    "                                    n_estimators = 30, \n",
+    "                                    random_state = 11, \n",
+    "                                    n_jobs = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=30, n_jobs=-1,\n",
+       "            oob_score=False, random_state=11, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forest_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13045112800"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_rss(forest_clf, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As in R, the best tree model does not perform nearly as well on this data set as our best regression model.  But perhaps a weighted combination of the two models can perform better still."
    ]
   },
   {
